# solver.cap

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  NOTICE.TXT  README.TXT  README.md  code.json
.github/workflows/: build.yml  install_qt_fast_windows.ps1  install_qt_module.ps1
data/: cultwri.out  mercer.out  pigeon.out  riogran1.out  riogran2.out  twri8.out  vellip.out  vellipcs.out
sdk/libs/: iriclib.lib
solverdef/: definition.xml
src/: APPROC.INC  CULFLW.INC  CULVRT.INC  FCNCN2.INC  Makefile  QTYP12.INC  build.bat  cinmod.F  cinmod.f  convert.f  convert.f90  culdmp.f  culrat.f  culvert.f  discharg.f  ellip.f  icvprp.f  icvprp_cgns.f  ixsprp.f  ixsprp_cgns.f  pipearc.f  shydie.f  shydie_cgns.f
src/CAP/: CAP.sln  CAP.vfproj
